# lesya

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
external_data/: foreign_names.txt  male_names.txt
lesya/: __init__.py
lesya/language/: case_helpers.py  name_case.py  name_constants.py  nc_core.py
lesya/language/data/: family-names.pkl
lesya/language/language_data/: family-names.csv  female_names.txt
tests/: test_lesya_cases.py
