[project]
name = "lesya"
version = "0.0.7"
authors = [
  { name="Dmytro Ustynov", email="ustynov.dev@gmail.com" },
]
description = "Python package to form Ukrainian names cases : 'Леся Українка' -- 'Лесі Українки' , 'Лесі Українці', 'Лесею Українкою' ... etc."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/ustynov-py-dev/lesya.git"
Issues = "https://github.com/ustynov-py-dev/lesya/issues"