[metadata]
name = lesya
author = Dmytro Ustynov
author_email = ustynov-dev@gmail.com
description = Python package to form Ukrainian names cases : "Леся Українка" -- "Лесі Українки" , "Лесі Українці", "Лесею Українкою" ... etc.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.package_data]
lesya.language.data = family-names.pkl
